// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/threading/channel_threads/thread_footer should match snapshot when a single message is followed 1`] = `
<Memo(ThreadFooter)
  threadId="singlemessageid"
>
  <div
    className="ThreadFooter"
  >
    <div
      className="indicator"
    />
    <Memo(FollowButton)
      className="separated"
      isFollowing={true}
      onClick={[Function]}
    >
      <Memo(Button)
        className="separated FollowButton"
        disabled={false}
        isActive={true}
        onClick={[Function]}
      >
        <button
          className="Button Button___transparent is-active separated FollowButton"
          disabled={false}
          onClick={[Function]}
        >
          <span
            className="Button_label"
          >
            Following
          </span>
        </button>
      </Memo(Button)>
    </Memo(FollowButton)>
  </div>
</Memo(ThreadFooter)>
`;

exports[`components/threading/channel_threads/thread_footer should report total number of replies 1`] = `
<Memo(ThreadFooter)
  threadId="postthreadid"
>
  <div
    className="ThreadFooter"
  >
    <div
      className="indicator"
    />
    <Memo(Avatars)
      size="sm"
      userIds={
        Array [
          "5",
          "4",
          "3",
          "2",
          "1",
        ]
      }
    >
      <div
        className="Avatars Avatars___sm"
      >
        <UserAvatar
          key="5"
          size="sm"
          style={
            Object {
              "background": "rgb(240, 240, 241)",
            }
          }
          userId="5"
        >
          <ProfilePopoverController
            src="/api/v4/users/5/image?_=0"
            triggerComponentAs="button"
            triggerComponentClass="style--none rounded-button"
            userId="5"
          >
            <button
              aria-expanded="false"
              aria-haspopup="dialog"
              className="style--none rounded-button"
              onClick={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onPointerDown={[Function]}
            >
              <WithTooltip
                id="tooltip-name-5"
                placement="top"
                title="first.last5"
              >
                <OverlayTrigger
                  defaultOverlayShown={false}
                  delay={400}
                  overlay={<Unknown />}
                  placement="top"
                  trigger={
                    Array [
                      "hover",
                      "focus",
                    ]
                  }
                >
                  <OverlayTrigger
                    defaultOverlayShown={false}
                    delay={400}
                    overlay={
                      <OverlayWrapper
                        intl={
                          Object {
                            "$t": [Function],
                            "defaultFormats": Object {},
                            "defaultLocale": "en",
                            "defaultRichTextElements": undefined,
                            "fallbackOnEmptyString": true,
                            "formatDate": [Function],
                            "formatDateTimeRange": [Function],
                            "formatDateToParts": [Function],
                            "formatDisplayName": [Function],
                            "formatList": [Function],
                            "formatListToParts": [Function],
                            "formatMessage": [Function],
                            "formatNumber": [Function],
                            "formatNumberToParts": [Function],
                            "formatPlural": [Function],
                            "formatRelativeTime": [Function],
                            "formatTime": [Function],
                            "formatTimeToParts": [Function],
                            "formats": Object {},
                            "formatters": Object {
                              "getDateTimeFormat": [Function],
                              "getDisplayNames": [Function],
                              "getListFormat": [Function],
                              "getMessageFormat": [Function],
                              "getNumberFormat": [Function],
                              "getPluralRules": [Function],
                              "getRelativeTimeFormat": [Function],
                            },
                            "locale": "en",
                            "messages": Object {},
                            "onError": [Function],
                            "onWarn": [Function],
                            "textComponent": "span",
                            "timeZone": "Etc/UTC",
                            "wrapRichTextChunksInFragment": undefined,
                          }
                        }
                      />
                    }
                    placement="top"
                    trigger={
                      Array [
                        "hover",
                        "focus",
                      ]
                    }
                  >
                    <Memo(Avatar)
                      onBlur={[Function]}
                      onClick={null}
                      onFocus={[Function]}
                      onMouseOut={[Function]}
                      onMouseOver={[Function]}
                      size="sm"
                      style={
                        Object {
                          "background": "rgb(240, 240, 241)",
                        }
                      }
                      tabIndex={-1}
                      url="/api/v4/users/5/image?_=0"
                    >
                      <img
                        alt="user profile image"
                        className="Avatar Avatar-sm"
                        loading="lazy"
                        onBlur={[Function]}
                        onClick={null}
                        onError={[Function]}
                        onFocus={[Function]}
                        onMouseOut={[Function]}
                        onMouseOver={[Function]}
                        src="/api/v4/users/5/image?_=0"
                        style={
                          Object {
                            "background": "rgb(240, 240, 241)",
                          }
                        }
                        tabIndex={-1}
                      />
                    </Memo(Avatar)>
                  </OverlayTrigger>
                </OverlayTrigger>
              </WithTooltip>
            </button>
          </ProfilePopoverController>
        </UserAvatar>
        <UserAvatar
          key="4"
          size="sm"
          style={
            Object {
              "background": "rgb(240, 240, 241)",
            }
          }
          userId="4"
        >
          <ProfilePopoverController
            src="/api/v4/users/4/image?_=0"
            triggerComponentAs="button"
            triggerComponentClass="style--none rounded-button"
            userId="4"
          >
            <button
              aria-expanded="false"
              aria-haspopup="dialog"
              className="style--none rounded-button"
              onClick={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onPointerDown={[Function]}
            >
              <WithTooltip
                id="tooltip-name-4"
                placement="top"
                title="first.last4"
              >
                <OverlayTrigger
                  defaultOverlayShown={false}
                  delay={400}
                  overlay={<Unknown />}
                  placement="top"
                  trigger={
                    Array [
                      "hover",
                      "focus",
                    ]
                  }
                >
                  <OverlayTrigger
                    defaultOverlayShown={false}
                    delay={400}
                    overlay={
                      <OverlayWrapper
                        intl={
                          Object {
                            "$t": [Function],
                            "defaultFormats": Object {},
                            "defaultLocale": "en",
                            "defaultRichTextElements": undefined,
                            "fallbackOnEmptyString": true,
                            "formatDate": [Function],
                            "formatDateTimeRange": [Function],
                            "formatDateToParts": [Function],
                            "formatDisplayName": [Function],
                            "formatList": [Function],
                            "formatListToParts": [Function],
                            "formatMessage": [Function],
                            "formatNumber": [Function],
                            "formatNumberToParts": [Function],
                            "formatPlural": [Function],
                            "formatRelativeTime": [Function],
                            "formatTime": [Function],
                            "formatTimeToParts": [Function],
                            "formats": Object {},
                            "formatters": Object {
                              "getDateTimeFormat": [Function],
                              "getDisplayNames": [Function],
                              "getListFormat": [Function],
                              "getMessageFormat": [Function],
                              "getNumberFormat": [Function],
                              "getPluralRules": [Function],
                              "getRelativeTimeFormat": [Function],
                            },
                            "locale": "en",
                            "messages": Object {},
                            "onError": [Function],
                            "onWarn": [Function],
                            "textComponent": "span",
                            "timeZone": "Etc/UTC",
                            "wrapRichTextChunksInFragment": undefined,
                          }
                        }
                      />
                    }
                    placement="top"
                    trigger={
                      Array [
                        "hover",
                        "focus",
                      ]
                    }
                  >
                    <Memo(Avatar)
                      onBlur={[Function]}
                      onClick={null}
                      onFocus={[Function]}
                      onMouseOut={[Function]}
                      onMouseOver={[Function]}
                      size="sm"
                      style={
                        Object {
                          "background": "rgb(240, 240, 241)",
                        }
                      }
                      tabIndex={-1}
                      url="/api/v4/users/4/image?_=0"
                    >
                      <img
                        alt="user profile image"
                        className="Avatar Avatar-sm"
                        loading="lazy"
                        onBlur={[Function]}
                        onClick={null}
                        onError={[Function]}
                        onFocus={[Function]}
                        onMouseOut={[Function]}
                        onMouseOver={[Function]}
                        src="/api/v4/users/4/image?_=0"
                        style={
                          Object {
                            "background": "rgb(240, 240, 241)",
                          }
                        }
                        tabIndex={-1}
                      />
                    </Memo(Avatar)>
                  </OverlayTrigger>
                </OverlayTrigger>
              </WithTooltip>
            </button>
          </ProfilePopoverController>
        </UserAvatar>
        <UserAvatar
          key="3"
          size="sm"
          style={
            Object {
              "background": "rgb(240, 240, 241)",
            }
          }
          userId="3"
        >
          <ProfilePopoverController
            src="/api/v4/users/3/image?_=0"
            triggerComponentAs="button"
            triggerComponentClass="style--none rounded-button"
            userId="3"
          >
            <button
              aria-expanded="false"
              aria-haspopup="dialog"
              className="style--none rounded-button"
              onClick={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onPointerDown={[Function]}
            >
              <WithTooltip
                id="tooltip-name-3"
                placement="top"
                title="first.last3"
              >
                <OverlayTrigger
                  defaultOverlayShown={false}
                  delay={400}
                  overlay={<Unknown />}
                  placement="top"
                  trigger={
                    Array [
                      "hover",
                      "focus",
                    ]
                  }
                >
                  <OverlayTrigger
                    defaultOverlayShown={false}
                    delay={400}
                    overlay={
                      <OverlayWrapper
                        intl={
                          Object {
                            "$t": [Function],
                            "defaultFormats": Object {},
                            "defaultLocale": "en",
                            "defaultRichTextElements": undefined,
                            "fallbackOnEmptyString": true,
                            "formatDate": [Function],
                            "formatDateTimeRange": [Function],
                            "formatDateToParts": [Function],
                            "formatDisplayName": [Function],
                            "formatList": [Function],
                            "formatListToParts": [Function],
                            "formatMessage": [Function],
                            "formatNumber": [Function],
                            "formatNumberToParts": [Function],
                            "formatPlural": [Function],
                            "formatRelativeTime": [Function],
                            "formatTime": [Function],
                            "formatTimeToParts": [Function],
                            "formats": Object {},
                            "formatters": Object {
                              "getDateTimeFormat": [Function],
                              "getDisplayNames": [Function],
                              "getListFormat": [Function],
                              "getMessageFormat": [Function],
                              "getNumberFormat": [Function],
                              "getPluralRules": [Function],
                              "getRelativeTimeFormat": [Function],
                            },
                            "locale": "en",
                            "messages": Object {},
                            "onError": [Function],
                            "onWarn": [Function],
                            "textComponent": "span",
                            "timeZone": "Etc/UTC",
                            "wrapRichTextChunksInFragment": undefined,
                          }
                        }
                      />
                    }
                    placement="top"
                    trigger={
                      Array [
                        "hover",
                        "focus",
                      ]
                    }
                  >
                    <Memo(Avatar)
                      onBlur={[Function]}
                      onClick={null}
                      onFocus={[Function]}
                      onMouseOut={[Function]}
                      onMouseOver={[Function]}
                      size="sm"
                      style={
                        Object {
                          "background": "rgb(240, 240, 241)",
                        }
                      }
                      tabIndex={-1}
                      url="/api/v4/users/3/image?_=0"
                    >
                      <img
                        alt="user profile image"
                        className="Avatar Avatar-sm"
                        loading="lazy"
                        onBlur={[Function]}
                        onClick={null}
                        onError={[Function]}
                        onFocus={[Function]}
                        onMouseOut={[Function]}
                        onMouseOver={[Function]}
                        src="/api/v4/users/3/image?_=0"
                        style={
                          Object {
                            "background": "rgb(240, 240, 241)",
                          }
                        }
                        tabIndex={-1}
                      />
                    </Memo(Avatar)>
                  </OverlayTrigger>
                </OverlayTrigger>
              </WithTooltip>
            </button>
          </ProfilePopoverController>
        </UserAvatar>
        <WithTooltip
          id="names-overflow"
          placement="top"
          title="first.last2, first.last1"
        >
          <OverlayTrigger
            defaultOverlayShown={false}
            delay={400}
            overlay={<Unknown />}
            placement="top"
            trigger={
              Array [
                "hover",
                "focus",
              ]
            }
          >
            <OverlayTrigger
              defaultOverlayShown={false}
              delay={400}
              overlay={
                <OverlayWrapper
                  intl={
                    Object {
                      "$t": [Function],
                      "defaultFormats": Object {},
                      "defaultLocale": "en",
                      "defaultRichTextElements": undefined,
                      "fallbackOnEmptyString": true,
                      "formatDate": [Function],
                      "formatDateTimeRange": [Function],
                      "formatDateToParts": [Function],
                      "formatDisplayName": [Function],
                      "formatList": [Function],
                      "formatListToParts": [Function],
                      "formatMessage": [Function],
                      "formatNumber": [Function],
                      "formatNumberToParts": [Function],
                      "formatPlural": [Function],
                      "formatRelativeTime": [Function],
                      "formatTime": [Function],
                      "formatTimeToParts": [Function],
                      "formats": Object {},
                      "formatters": Object {
                        "getDateTimeFormat": [Function],
                        "getDisplayNames": [Function],
                        "getListFormat": [Function],
                        "getMessageFormat": [Function],
                        "getNumberFormat": [Function],
                        "getPluralRules": [Function],
                        "getRelativeTimeFormat": [Function],
                      },
                      "locale": "en",
                      "messages": Object {},
                      "onError": [Function],
                      "onWarn": [Function],
                      "textComponent": "span",
                      "timeZone": "Etc/UTC",
                      "wrapRichTextChunksInFragment": undefined,
                    }
                  }
                />
              }
              placement="top"
              trigger={
                Array [
                  "hover",
                  "focus",
                ]
              }
            >
              <Memo(Avatar)
                onBlur={[Function]}
                onClick={null}
                onFocus={[Function]}
                onMouseOut={[Function]}
                onMouseOver={[Function]}
                size="sm"
                style={
                  Object {
                    "background": "rgb(240, 240, 241)",
                  }
                }
                tabIndex={0}
                text="+2"
              >
                <div
                  className="Avatar Avatar-sm Avatar-plain"
                  data-content="+2"
                  onBlur={[Function]}
                  onClick={null}
                  onFocus={[Function]}
                  onMouseOut={[Function]}
                  onMouseOver={[Function]}
                  style={
                    Object {
                      "background": "rgb(240, 240, 241)",
                    }
                  }
                  tabIndex={0}
                />
              </Memo(Avatar)>
            </OverlayTrigger>
          </OverlayTrigger>
        </WithTooltip>
      </div>
    </Memo(Avatars)>
    <Memo(Button)
      className="ReplyButton separated"
      onClick={[Function]}
      prepend={
        <span
          className="icon"
        >
          <i
            className="icon-reply-outline"
          />
        </span>
      }
    >
      <button
        className="Button Button___transparent ReplyButton separated"
        onClick={[Function]}
      >
        <span
          className="Button_prepended"
        >
          <span
            className="icon"
          >
            <i
              className="icon-reply-outline"
            />
          </span>
        </span>
        <span
          className="Button_label"
        >
          <FormattedMessage
            defaultMessage="{totalReplies, plural, =0 {Reply} =1 {# reply} other {# replies}}"
            id="threading.numReplies"
            values={
              Object {
                "totalReplies": 9,
              }
            }
          >
            <span>
              9 replies
            </span>
          </FormattedMessage>
        </span>
      </button>
    </Memo(Button)>
    <Memo(FollowButton)
      className="separated"
      isFollowing={true}
      onClick={[Function]}
    >
      <Memo(Button)
        className="separated FollowButton"
        disabled={false}
        isActive={true}
        onClick={[Function]}
      >
        <button
          className="Button Button___transparent is-active separated FollowButton"
          disabled={false}
          onClick={[Function]}
        >
          <span
            className="Button_label"
          >
            Following
          </span>
        </button>
      </Memo(Button)>
    </Memo(FollowButton)>
    <Connect(injectIntl(Timestamp))
      day="numeric"
      units={
        Array [
          "now",
          "minute",
          "hour",
          "day",
          "week",
        ]
      }
      useTime={false}
      value={1554161504000}
    >
      <injectIntl(Timestamp)
        day="numeric"
        dispatch={[Function]}
        hourCycle="h12"
        units={
          Array [
            "now",
            "minute",
            "hour",
            "day",
            "week",
          ]
        }
        useTime={false}
        value={1554161504000}
      >
        <Timestamp
          day="numeric"
          dispatch={[Function]}
          hour="numeric"
          hourCycle="h12"
          intl={
            Object {
              "$t": [Function],
              "defaultFormats": Object {},
              "defaultLocale": "en",
              "defaultRichTextElements": undefined,
              "fallbackOnEmptyString": true,
              "formatDate": [Function],
              "formatDateTimeRange": [Function],
              "formatDateToParts": [Function],
              "formatDisplayName": [Function],
              "formatList": [Function],
              "formatListToParts": [Function],
              "formatMessage": [Function],
              "formatNumber": [Function],
              "formatNumberToParts": [Function],
              "formatPlural": [Function],
              "formatRelativeTime": [Function],
              "formatTime": [Function],
              "formatTimeToParts": [Function],
              "formats": Object {},
              "formatters": Object {
                "getDateTimeFormat": [Function],
                "getDisplayNames": [Function],
                "getListFormat": [Function],
                "getMessageFormat": [Function],
                "getNumberFormat": [Function],
                "getPluralRules": [Function],
                "getRelativeTimeFormat": [Function],
              },
              "locale": "en",
              "messages": Object {},
              "onError": [Function],
              "onWarn": [Function],
              "textComponent": "span",
              "timeZone": "Etc/UTC",
              "wrapRichTextChunksInFragment": undefined,
            }
          }
          minute="numeric"
          month="long"
          numeric="auto"
          relNearest={1}
          second="numeric"
          style="long"
          timeZoneName="short"
          units={
            Array [
              "now",
              "minute",
              "hour",
              "day",
              "week",
            ]
          }
          useTime={false}
          value={1554161504000}
          weekday="long"
          year="numeric"
        >
          <span
            className="Timestamp separated alt-visible"
          >
            <FormattedMessage
              defaultMessage="Last reply {formatted}"
              id="threading.footer.lastReplyAt"
              values={
                Object {
                  "formatted": <Memo(SemanticTime)
                    value={2019-04-01T23:31:44.000Z}
                  >
                    April 1, 2019
                  </Memo(SemanticTime)>,
                }
              }
            >
              <span>
                Last reply 
                <Memo(SemanticTime)
                  key=".$.1"
                  value={2019-04-01T23:31:44.000Z}
                >
                  <time
                    dateTime="2019-04-01T23:31:44.000"
                  >
                    April 1, 2019
                  </time>
                </Memo(SemanticTime)>
              </span>
            </FormattedMessage>
          </span>
        </Timestamp>
      </injectIntl(Timestamp)>
    </Connect(injectIntl(Timestamp))>
  </div>
</Memo(ThreadFooter)>
`;

exports[`components/threading/channel_threads/thread_footer should show unread indicator 1`] = `
<Memo(ThreadFooter)
  threadId="postthreadid"
>
  <div
    className="ThreadFooter"
  >
    <SimpleTooltip
      content={
        <Memo(MemoizedFormattedMessage)
          defaultMessage="{newReplies, plural, =0 {no unread messages} =1 {one unread message} other {# unread messages}}"
          id="threading.numNewMessages"
          values={
            Object {
              "newReplies": 2,
            }
          }
        />
      }
      id="threadFooterIndicator"
    >
      <OverlayTrigger
        defaultOverlayShown={false}
        delayShow={100}
        overlay={
          <Tooltip
            className="hidden-xs"
            id="threadFooterIndicator"
            placement="top"
          >
            <Memo(MemoizedFormattedMessage)
              defaultMessage="{newReplies, plural, =0 {no unread messages} =1 {one unread message} other {# unread messages}}"
              id="threading.numNewMessages"
              values={
                Object {
                  "newReplies": 2,
                }
              }
            />
          </Tooltip>
        }
        placement="top"
        trigger={
          Array [
            "hover",
            "focus",
          ]
        }
      >
        <OverlayTrigger
          defaultOverlayShown={false}
          delayShow={100}
          overlay={
            <OverlayWrapper
              className="hidden-xs"
              id="threadFooterIndicator"
              intl={
                Object {
                  "$t": [Function],
                  "defaultFormats": Object {},
                  "defaultLocale": "en",
                  "defaultRichTextElements": undefined,
                  "fallbackOnEmptyString": true,
                  "formatDate": [Function],
                  "formatDateTimeRange": [Function],
                  "formatDateToParts": [Function],
                  "formatDisplayName": [Function],
                  "formatList": [Function],
                  "formatListToParts": [Function],
                  "formatMessage": [Function],
                  "formatNumber": [Function],
                  "formatNumberToParts": [Function],
                  "formatPlural": [Function],
                  "formatRelativeTime": [Function],
                  "formatTime": [Function],
                  "formatTimeToParts": [Function],
                  "formats": Object {},
                  "formatters": Object {
                    "getDateTimeFormat": [Function],
                    "getDisplayNames": [Function],
                    "getListFormat": [Function],
                    "getMessageFormat": [Function],
                    "getNumberFormat": [Function],
                    "getPluralRules": [Function],
                    "getRelativeTimeFormat": [Function],
                  },
                  "locale": "en",
                  "messages": Object {},
                  "onError": [Function],
                  "onWarn": [Function],
                  "textComponent": "span",
                  "timeZone": "Etc/UTC",
                  "wrapRichTextChunksInFragment": undefined,
                }
              }
              placement="top"
            >
              <Memo(MemoizedFormattedMessage)
                defaultMessage="{newReplies, plural, =0 {no unread messages} =1 {one unread message} other {# unread messages}}"
                id="threading.numNewMessages"
                values={
                  Object {
                    "newReplies": 2,
                  }
                }
              />
            </OverlayWrapper>
          }
          placement="top"
          trigger={
            Array [
              "hover",
              "focus",
            ]
          }
        >
          <div
            className="indicator"
            onBlur={[Function]}
            onClick={null}
            onFocus={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
            tabIndex={0}
          >
            <div
              className="dot-unreads"
            />
          </div>
        </OverlayTrigger>
      </OverlayTrigger>
    </SimpleTooltip>
    <Memo(Avatars)
      size="sm"
      userIds={
        Array [
          "5",
          "4",
          "3",
          "2",
          "1",
        ]
      }
    >
      <div
        className="Avatars Avatars___sm"
      >
        <UserAvatar
          key="5"
          size="sm"
          style={
            Object {
              "background": "rgb(240, 240, 241)",
            }
          }
          userId="5"
        >
          <ProfilePopoverController
            src="/api/v4/users/5/image?_=0"
            triggerComponentAs="button"
            triggerComponentClass="style--none rounded-button"
            userId="5"
          >
            <button
              aria-expanded="false"
              aria-haspopup="dialog"
              className="style--none rounded-button"
              onClick={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onPointerDown={[Function]}
            >
              <WithTooltip
                id="tooltip-name-5"
                placement="top"
                title="first.last5"
              >
                <OverlayTrigger
                  defaultOverlayShown={false}
                  delay={400}
                  overlay={<Unknown />}
                  placement="top"
                  trigger={
                    Array [
                      "hover",
                      "focus",
                    ]
                  }
                >
                  <OverlayTrigger
                    defaultOverlayShown={false}
                    delay={400}
                    overlay={
                      <OverlayWrapper
                        intl={
                          Object {
                            "$t": [Function],
                            "defaultFormats": Object {},
                            "defaultLocale": "en",
                            "defaultRichTextElements": undefined,
                            "fallbackOnEmptyString": true,
                            "formatDate": [Function],
                            "formatDateTimeRange": [Function],
                            "formatDateToParts": [Function],
                            "formatDisplayName": [Function],
                            "formatList": [Function],
                            "formatListToParts": [Function],
                            "formatMessage": [Function],
                            "formatNumber": [Function],
                            "formatNumberToParts": [Function],
                            "formatPlural": [Function],
                            "formatRelativeTime": [Function],
                            "formatTime": [Function],
                            "formatTimeToParts": [Function],
                            "formats": Object {},
                            "formatters": Object {
                              "getDateTimeFormat": [Function],
                              "getDisplayNames": [Function],
                              "getListFormat": [Function],
                              "getMessageFormat": [Function],
                              "getNumberFormat": [Function],
                              "getPluralRules": [Function],
                              "getRelativeTimeFormat": [Function],
                            },
                            "locale": "en",
                            "messages": Object {},
                            "onError": [Function],
                            "onWarn": [Function],
                            "textComponent": "span",
                            "timeZone": "Etc/UTC",
                            "wrapRichTextChunksInFragment": undefined,
                          }
                        }
                      />
                    }
                    placement="top"
                    trigger={
                      Array [
                        "hover",
                        "focus",
                      ]
                    }
                  >
                    <Memo(Avatar)
                      onBlur={[Function]}
                      onClick={null}
                      onFocus={[Function]}
                      onMouseOut={[Function]}
                      onMouseOver={[Function]}
                      size="sm"
                      style={
                        Object {
                          "background": "rgb(240, 240, 241)",
                        }
                      }
                      tabIndex={-1}
                      url="/api/v4/users/5/image?_=0"
                    >
                      <img
                        alt="user profile image"
                        className="Avatar Avatar-sm"
                        loading="lazy"
                        onBlur={[Function]}
                        onClick={null}
                        onError={[Function]}
                        onFocus={[Function]}
                        onMouseOut={[Function]}
                        onMouseOver={[Function]}
                        src="/api/v4/users/5/image?_=0"
                        style={
                          Object {
                            "background": "rgb(240, 240, 241)",
                          }
                        }
                        tabIndex={-1}
                      />
                    </Memo(Avatar)>
                  </OverlayTrigger>
                </OverlayTrigger>
              </WithTooltip>
            </button>
          </ProfilePopoverController>
        </UserAvatar>
        <UserAvatar
          key="4"
          size="sm"
          style={
            Object {
              "background": "rgb(240, 240, 241)",
            }
          }
          userId="4"
        >
          <ProfilePopoverController
            src="/api/v4/users/4/image?_=0"
            triggerComponentAs="button"
            triggerComponentClass="style--none rounded-button"
            userId="4"
          >
            <button
              aria-expanded="false"
              aria-haspopup="dialog"
              className="style--none rounded-button"
              onClick={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onPointerDown={[Function]}
            >
              <WithTooltip
                id="tooltip-name-4"
                placement="top"
                title="first.last4"
              >
                <OverlayTrigger
                  defaultOverlayShown={false}
                  delay={400}
                  overlay={<Unknown />}
                  placement="top"
                  trigger={
                    Array [
                      "hover",
                      "focus",
                    ]
                  }
                >
                  <OverlayTrigger
                    defaultOverlayShown={false}
                    delay={400}
                    overlay={
                      <OverlayWrapper
                        intl={
                          Object {
                            "$t": [Function],
                            "defaultFormats": Object {},
                            "defaultLocale": "en",
                            "defaultRichTextElements": undefined,
                            "fallbackOnEmptyString": true,
                            "formatDate": [Function],
                            "formatDateTimeRange": [Function],
                            "formatDateToParts": [Function],
                            "formatDisplayName": [Function],
                            "formatList": [Function],
                            "formatListToParts": [Function],
                            "formatMessage": [Function],
                            "formatNumber": [Function],
                            "formatNumberToParts": [Function],
                            "formatPlural": [Function],
                            "formatRelativeTime": [Function],
                            "formatTime": [Function],
                            "formatTimeToParts": [Function],
                            "formats": Object {},
                            "formatters": Object {
                              "getDateTimeFormat": [Function],
                              "getDisplayNames": [Function],
                              "getListFormat": [Function],
                              "getMessageFormat": [Function],
                              "getNumberFormat": [Function],
                              "getPluralRules": [Function],
                              "getRelativeTimeFormat": [Function],
                            },
                            "locale": "en",
                            "messages": Object {},
                            "onError": [Function],
                            "onWarn": [Function],
                            "textComponent": "span",
                            "timeZone": "Etc/UTC",
                            "wrapRichTextChunksInFragment": undefined,
                          }
                        }
                      />
                    }
                    placement="top"
                    trigger={
                      Array [
                        "hover",
                        "focus",
                      ]
                    }
                  >
                    <Memo(Avatar)
                      onBlur={[Function]}
                      onClick={null}
                      onFocus={[Function]}
                      onMouseOut={[Function]}
                      onMouseOver={[Function]}
                      size="sm"
                      style={
                        Object {
                          "background": "rgb(240, 240, 241)",
                        }
                      }
                      tabIndex={-1}
                      url="/api/v4/users/4/image?_=0"
                    >
                      <img
                        alt="user profile image"
                        className="Avatar Avatar-sm"
                        loading="lazy"
                        onBlur={[Function]}
                        onClick={null}
                        onError={[Function]}
                        onFocus={[Function]}
                        onMouseOut={[Function]}
                        onMouseOver={[Function]}
                        src="/api/v4/users/4/image?_=0"
                        style={
                          Object {
                            "background": "rgb(240, 240, 241)",
                          }
                        }
                        tabIndex={-1}
                      />
                    </Memo(Avatar)>
                  </OverlayTrigger>
                </OverlayTrigger>
              </WithTooltip>
            </button>
          </ProfilePopoverController>
        </UserAvatar>
        <UserAvatar
          key="3"
          size="sm"
          style={
            Object {
              "background": "rgb(240, 240, 241)",
            }
          }
          userId="3"
        >
          <ProfilePopoverController
            src="/api/v4/users/3/image?_=0"
            triggerComponentAs="button"
            triggerComponentClass="style--none rounded-button"
            userId="3"
          >
            <button
              aria-expanded="false"
              aria-haspopup="dialog"
              className="style--none rounded-button"
              onClick={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onPointerDown={[Function]}
            >
              <WithTooltip
                id="tooltip-name-3"
                placement="top"
                title="first.last3"
              >
                <OverlayTrigger
                  defaultOverlayShown={false}
                  delay={400}
                  overlay={<Unknown />}
                  placement="top"
                  trigger={
                    Array [
                      "hover",
                      "focus",
                    ]
                  }
                >
                  <OverlayTrigger
                    defaultOverlayShown={false}
                    delay={400}
                    overlay={
                      <OverlayWrapper
                        intl={
                          Object {
                            "$t": [Function],
                            "defaultFormats": Object {},
                            "defaultLocale": "en",
                            "defaultRichTextElements": undefined,
                            "fallbackOnEmptyString": true,
                            "formatDate": [Function],
                            "formatDateTimeRange": [Function],
                            "formatDateToParts": [Function],
                            "formatDisplayName": [Function],
                            "formatList": [Function],
                            "formatListToParts": [Function],
                            "formatMessage": [Function],
                            "formatNumber": [Function],
                            "formatNumberToParts": [Function],
                            "formatPlural": [Function],
                            "formatRelativeTime": [Function],
                            "formatTime": [Function],
                            "formatTimeToParts": [Function],
                            "formats": Object {},
                            "formatters": Object {
                              "getDateTimeFormat": [Function],
                              "getDisplayNames": [Function],
                              "getListFormat": [Function],
                              "getMessageFormat": [Function],
                              "getNumberFormat": [Function],
                              "getPluralRules": [Function],
                              "getRelativeTimeFormat": [Function],
                            },
                            "locale": "en",
                            "messages": Object {},
                            "onError": [Function],
                            "onWarn": [Function],
                            "textComponent": "span",
                            "timeZone": "Etc/UTC",
                            "wrapRichTextChunksInFragment": undefined,
                          }
                        }
                      />
                    }
                    placement="top"
                    trigger={
                      Array [
                        "hover",
                        "focus",
                      ]
                    }
                  >
                    <Memo(Avatar)
                      onBlur={[Function]}
                      onClick={null}
                      onFocus={[Function]}
                      onMouseOut={[Function]}
                      onMouseOver={[Function]}
                      size="sm"
                      style={
                        Object {
                          "background": "rgb(240, 240, 241)",
                        }
                      }
                      tabIndex={-1}
                      url="/api/v4/users/3/image?_=0"
                    >
                      <img
                        alt="user profile image"
                        className="Avatar Avatar-sm"
                        loading="lazy"
                        onBlur={[Function]}
                        onClick={null}
                        onError={[Function]}
                        onFocus={[Function]}
                        onMouseOut={[Function]}
                        onMouseOver={[Function]}
                        src="/api/v4/users/3/image?_=0"
                        style={
                          Object {
                            "background": "rgb(240, 240, 241)",
                          }
                        }
                        tabIndex={-1}
                      />
                    </Memo(Avatar)>
                  </OverlayTrigger>
                </OverlayTrigger>
              </WithTooltip>
            </button>
          </ProfilePopoverController>
        </UserAvatar>
        <WithTooltip
          id="names-overflow"
          placement="top"
          title="first.last2, first.last1"
        >
          <OverlayTrigger
            defaultOverlayShown={false}
            delay={400}
            overlay={<Unknown />}
            placement="top"
            trigger={
              Array [
                "hover",
                "focus",
              ]
            }
          >
            <OverlayTrigger
              defaultOverlayShown={false}
              delay={400}
              overlay={
                <OverlayWrapper
                  intl={
                    Object {
                      "$t": [Function],
                      "defaultFormats": Object {},
                      "defaultLocale": "en",
                      "defaultRichTextElements": undefined,
                      "fallbackOnEmptyString": true,
                      "formatDate": [Function],
                      "formatDateTimeRange": [Function],
                      "formatDateToParts": [Function],
                      "formatDisplayName": [Function],
                      "formatList": [Function],
                      "formatListToParts": [Function],
                      "formatMessage": [Function],
                      "formatNumber": [Function],
                      "formatNumberToParts": [Function],
                      "formatPlural": [Function],
                      "formatRelativeTime": [Function],
                      "formatTime": [Function],
                      "formatTimeToParts": [Function],
                      "formats": Object {},
                      "formatters": Object {
                        "getDateTimeFormat": [Function],
                        "getDisplayNames": [Function],
                        "getListFormat": [Function],
                        "getMessageFormat": [Function],
                        "getNumberFormat": [Function],
                        "getPluralRules": [Function],
                        "getRelativeTimeFormat": [Function],
                      },
                      "locale": "en",
                      "messages": Object {},
                      "onError": [Function],
                      "onWarn": [Function],
                      "textComponent": "span",
                      "timeZone": "Etc/UTC",
                      "wrapRichTextChunksInFragment": undefined,
                    }
                  }
                />
              }
              placement="top"
              trigger={
                Array [
                  "hover",
                  "focus",
                ]
              }
            >
              <Memo(Avatar)
                onBlur={[Function]}
                onClick={null}
                onFocus={[Function]}
                onMouseOut={[Function]}
                onMouseOver={[Function]}
                size="sm"
                style={
                  Object {
                    "background": "rgb(240, 240, 241)",
                  }
                }
                tabIndex={0}
                text="+2"
              >
                <div
                  className="Avatar Avatar-sm Avatar-plain"
                  data-content="+2"
                  onBlur={[Function]}
                  onClick={null}
                  onFocus={[Function]}
                  onMouseOut={[Function]}
                  onMouseOver={[Function]}
                  style={
                    Object {
                      "background": "rgb(240, 240, 241)",
                    }
                  }
                  tabIndex={0}
                />
              </Memo(Avatar)>
            </OverlayTrigger>
          </OverlayTrigger>
        </WithTooltip>
      </div>
    </Memo(Avatars)>
    <Memo(Button)
      className="ReplyButton separated"
      onClick={[Function]}
      prepend={
        <span
          className="icon"
        >
          <i
            className="icon-reply-outline"
          />
        </span>
      }
    >
      <button
        className="Button Button___transparent ReplyButton separated"
        onClick={[Function]}
      >
        <span
          className="Button_prepended"
        >
          <span
            className="icon"
          >
            <i
              className="icon-reply-outline"
            />
          </span>
        </span>
        <span
          className="Button_label"
        >
          <FormattedMessage
            defaultMessage="{totalReplies, plural, =0 {Reply} =1 {# reply} other {# replies}}"
            id="threading.numReplies"
            values={
              Object {
                "totalReplies": 9,
              }
            }
          >
            <span>
              9 replies
            </span>
          </FormattedMessage>
        </span>
      </button>
    </Memo(Button)>
    <Memo(FollowButton)
      className="separated"
      isFollowing={true}
      onClick={[Function]}
    >
      <Memo(Button)
        className="separated FollowButton"
        disabled={false}
        isActive={true}
        onClick={[Function]}
      >
        <button
          className="Button Button___transparent is-active separated FollowButton"
          disabled={false}
          onClick={[Function]}
        >
          <span
            className="Button_label"
          >
            Following
          </span>
        </button>
      </Memo(Button)>
    </Memo(FollowButton)>
    <Connect(injectIntl(Timestamp))
      day="numeric"
      units={
        Array [
          "now",
          "minute",
          "hour",
          "day",
          "week",
        ]
      }
      useTime={false}
      value={1554161504000}
    >
      <injectIntl(Timestamp)
        day="numeric"
        dispatch={[Function]}
        hourCycle="h12"
        units={
          Array [
            "now",
            "minute",
            "hour",
            "day",
            "week",
          ]
        }
        useTime={false}
        value={1554161504000}
      >
        <Timestamp
          day="numeric"
          dispatch={[Function]}
          hour="numeric"
          hourCycle="h12"
          intl={
            Object {
              "$t": [Function],
              "defaultFormats": Object {},
              "defaultLocale": "en",
              "defaultRichTextElements": undefined,
              "fallbackOnEmptyString": true,
              "formatDate": [Function],
              "formatDateTimeRange": [Function],
              "formatDateToParts": [Function],
              "formatDisplayName": [Function],
              "formatList": [Function],
              "formatListToParts": [Function],
              "formatMessage": [Function],
              "formatNumber": [Function],
              "formatNumberToParts": [Function],
              "formatPlural": [Function],
              "formatRelativeTime": [Function],
              "formatTime": [Function],
              "formatTimeToParts": [Function],
              "formats": Object {},
              "formatters": Object {
                "getDateTimeFormat": [Function],
                "getDisplayNames": [Function],
                "getListFormat": [Function],
                "getMessageFormat": [Function],
                "getNumberFormat": [Function],
                "getPluralRules": [Function],
                "getRelativeTimeFormat": [Function],
              },
              "locale": "en",
              "messages": Object {},
              "onError": [Function],
              "onWarn": [Function],
              "textComponent": "span",
              "timeZone": "Etc/UTC",
              "wrapRichTextChunksInFragment": undefined,
            }
          }
          minute="numeric"
          month="long"
          numeric="auto"
          relNearest={1}
          second="numeric"
          style="long"
          timeZoneName="short"
          units={
            Array [
              "now",
              "minute",
              "hour",
              "day",
              "week",
            ]
          }
          useTime={false}
          value={1554161504000}
          weekday="long"
          year="numeric"
        >
          <span
            className="Timestamp separated alt-visible"
          >
            <FormattedMessage
              defaultMessage="Last reply {formatted}"
              id="threading.footer.lastReplyAt"
              values={
                Object {
                  "formatted": <Memo(SemanticTime)
                    value={2019-04-01T23:31:44.000Z}
                  >
                    April 1, 2019
                  </Memo(SemanticTime)>,
                }
              }
            >
              <span>
                Last reply 
                <Memo(SemanticTime)
                  key=".$.1"
                  value={2019-04-01T23:31:44.000Z}
                >
                  <time
                    dateTime="2019-04-01T23:31:44.000"
                  >
                    April 1, 2019
                  </time>
                </Memo(SemanticTime)>
              </span>
            </FormattedMessage>
          </span>
        </Timestamp>
      </injectIntl(Timestamp)>
    </Connect(injectIntl(Timestamp))>
  </div>
</Memo(ThreadFooter)>
`;
